<resources>
    <string name="app_name">MediTrack</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home</string>
    <string name="calendar_fragment_label">Calendar</string>
    <string name="incident_summary_fragment_label">Incident Summary</string>
    <string name="practitioners_fragment_label">Practitioners</string>
    <string name="about_me_fragment_label">About Me</string>
    <string name="input_fragment_label">Input</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="intro_heading_home">Welcome to MediTrack!</string>
    <string name="intro_blurb_home">Your personal medical tracking application, used for all of your health needs.</string>
    <string name="hello_calendar_fragment">Hello calendar fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_incident_summary_fragment">Hello incident summary fragment</string>
    <string name="hello_practitioners_fragment">Hello practitioners fragment</string>
    <string name="hello_about_me_fragment">Hello about me fragment</string>
    <string name="hello_input_fragment">Hello input fragment</string>
    <string name="input_button">Input button</string>
    <string name="current_date">Current Date</string>
    <string name="medicineName">medicineName</string>
    <string name="medicineTime">medicineTime</string>
    <string name="display_logo">Display logo</string>
    <string name="go_to_calendar">Go to Calendar</string>
    <string name="input_your_symptoms">Input your symptoms</string>
    <string name="how_are_you_feeling_today">How are you feeling today?</string>
    <string name="schedule">Schedule</string>
    <string name="image_for_article">Image for Article</string>
    <string name="test_title">Test title</string>
    <string name="test_description">Test description</string>
    <string name="test_date">Test date</string>
    <string name="health_news">Health News</string>
    <string name="call_now">Call Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="meds_about_me">Medications</string>
    <string name="conditions_about_me">Conditions</string>
    <string name="incidents_about_me">Incidents</string>
    <string name="appointments_about_me">Appointments</string>
    <string name="select_input_option">Select Input Option</string>
    <string name="enter_daily_incident_report">Enter Daily Incident Report</string>
    <string name="enter_practitioners">Enter Practitioners</string>
    <string name="enter_appointments">Enter Appointments</string>
    <string name="enter_medications">Enter Medications</string>
    <string name="enter_conditions">Enter Conditions</string>
    <string name="enter_appointment_name">Enter Appointment Name</string>
    <string name="enter_date">Enter Date</string>
    <string name="choose_time">Choose Time</string>
    <string name="enter_doctor_s_name">Enter Doctor\'s Name</string>
    <string name="enter_doctor_s_phone_number">Enter Doctor\'s Phone Number</string>
    <string name="enter_doctor_s_address">Enter Doctor\'s Address</string>
    <string name="submit">Submit</string>
    <string name="enter_condition_name">Enter Condition Name</string>
    <string name="enter_related_procedure_history">Enter Related Procedure History</string>
    <string name="enter_symptoms_history">Enter Symptoms History</string>
    <string name="incidents">Incidents</string>
    <string name="symptom">Symptom</string>
    <string name="severity">Severity</string>
    <string name="add_another_symptom">Add Another Symptom</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="enter_medication_name">Enter Medication Name</string>
    <string name="select_days_for_medication">Select Days for Medication:</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="enter_medication_dosage_mg">Enter Medication Dosage (mg)</string>
    <string name="enter_medication_actions">Enter Medication Actions</string>
    <string name="enter_medication_directions">Enter Medication Directions</string>
    <string name="enter_total_amount_mg">Enter Total Amount (mg)</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="title_expander">Title</string>
    <string name="property_1">Property 1</string>
    <string name="property_2">Property 2</string>
    <string name="property_3">Property 3</string>
    <string name="property_5">Property 5</string>
    <string name="practitioner_info">Practitioner Info</string>
    <string name="practitioner_s_name_eg_dr_smith">Practitioner\'s Name (eg. Dr. Smith)</string>
    <string name="practitioner_s_title_eg_psychologist">Practitioner\'s Title (eg. Psychologist)</string>
    <string name="cost_per_session_eg_80">Cost Per Session ($) (eg. $80)</string>
    <string name="insurance_practitioners">Insurance</string>
    <string name="insurance_provider_eg_sunlife">Insurance Provider (eg. SunLife)</string>
    <string name="annual_coverage_for_expense_eg_500">Annual Coverage for Expense ($) (eg. $500)</string>
    <string name="reimbursement_eg_80">Reimbursement (%) (eg. 80)</string>
    <string name="your_practitioners">Your Practitioners</string>
    <string name="default_text">Default Text</string>
    <string-array name="symptoms_array">
        <item>Heartburn</item>
        <item>Chest Pain</item>
        <item>Sore Throat</item>
        <item>Shortness</item>
        <item>Wheezing</item>
        <item>Nausea</item>
        <item>Other</item>
    </string-array>
</resources>