<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".InputMedicationsFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/medName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_medication_name"
            android:textColor="@color/black"
            android:layout_margin="10dp" />

        <EditText
            android:id="@+id/medicationTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:hint="@string/choose_time"
            android:textColor="@color/black"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/days_check"
            android:text="@string/select_days_for_medication"
            android:textSize="18sp"
            android:layout_margin="10dp" />

        <CheckBox
            android:id="@+id/checkMonday"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="18sp"
            android:text="@string/monday"
            android:layout_margin="10dp" />

        <CheckBox
            android:id="@+id/checkTuesday"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="18sp"
            android:text="@string/tuesday"
            android:layout_margin="10dp" />

        <CheckBox
            android:id="@+id/checkWednesday"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="18sp"
            android:text="@string/wednesday"
            android:layout_margin="10dp" />

        <CheckBox
            android:id="@+id/checkThursday"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="18sp"
            android:text="@string/thursday"
            android:layout_margin="10dp" />

        <CheckBox
            android:id="@+id/checkFriday"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="18sp"
            android:text="@string/friday"
            android:layout_margin="10dp" />

        <CheckBox
            android:id="@+id/checkSaturday"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="18sp"
            android:text="@string/saturday"
            android:layout_margin="10dp" />

        <CheckBox
            android:id="@+id/checkSunday"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="18sp"
            android:text="@string/sunday"
            android:layout_margin="10dp" />

        <EditText
            android:id="@+id/medDosage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/enter_medication_dosage_mg"
            android:textColor="@color/black"
            android:layout_margin="10dp" />

        <EditText
            android:id="@+id/medActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
            android:hint="@string/enter_medication_actions"
            android:textColor="@color/black"
            android:layout_margin="10dp" />

        <EditText
            android:id="@+id/medDirections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
            android:hint="@string/enter_medication_directions"
            android:textColor="@color/black"
            android:layout_margin="10dp" />

        <EditText
            android:id="@+id/medTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/enter_total_amount_mg"
            android:textColor="@color/black"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/submitInputMed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>