<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.example.myapplication.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_Home_to_Calendar"
            app:destination="@id/CalendarFragment" />

    </fragment>
    <fragment
        android:id="@+id/CalendarFragment"
        android:name="com.example.myapplication.CalendarFragment"
        android:label="@string/calendar_fragment_label"
        tools:layout="@layout/fragment_calendar">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/IncidentSummaryFragment"
        android:name="com.example.myapplication.IncidentSummaryFragment"
        android:label="@string/incident_summary_fragment_label"
        tools:layout="@layout/fragment_incident_summary">

    </fragment>
    <fragment
        android:id="@+id/PractitionersFragment"
        android:name="com.example.myapplication.PractitionersFragment"
        android:label="@string/practitioners_fragment_label"
        tools:layout="@layout/fragment_practitioners">
    </fragment>
    <fragment
        android:id="@+id/AboutMeFragment"
        android:name="com.example.myapplication.AboutMeFragment"
        android:label="@string/about_me_fragment_label"
        tools:layout="@layout/fragment_about_me">
    </fragment>
    <fragment
        android:id="@+id/InputAppointmentFragment"
        android:name="com.example.myapplication.InputAppointmentFragment"
        android:label="InputAppointment"
        tools:layout="@layout/fragment_input_appointment">
    </fragment>
    <fragment
        android:id="@+id/InputFragment"
        android:name="com.example.myapplication.InputFragment"
        android:label="Input"
        tools:layout="@layout/fragment_input">
        <action
            android:id="@+id/action_InputFragment_to_InputAppointmentFragment"
            app:destination="@id/InputAppointmentFragment" />
    </fragment>
</navigation>