<?xml version="1.0" encoding="utf-8"?>
<!--    https://blog.techchee.com/develop-a-simple-news-search-android-app-with-kotlin-newsapi/-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140sp"
    android:padding="2sp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/newsImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="4dp"
        android:padding="2sp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_max="100sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138"
        app:layout_constraintWidth_max="100sp"
        android:contentDescription="@string/image_for_article" />

    <TextView
        android:id="@+id/newsTitle"
        android:layout_width="260sp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/test_title"
        android:textAlignment="gravity"
        android:textColor="@android:color/background_dark"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/newsImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063"
        app:layout_constraintWidth_max="300sp"
        app:layout_constraintWidth_min="160sp" />

    <TextView
        android:id="@+id/newsDescription"
        android:layout_width="260sp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="3"
        android:text="@string/test_description"
        android:textAlignment="gravity"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/newsImage"
        app:layout_constraintTop_toBottomOf="@+id/newsTitle"
        app:layout_constraintWidth_max="300sp"
        app:layout_constraintWidth_min="160sp" />

    <TextView
        android:id="@+id/newsDate"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/test_date"
        android:textAlignment="gravity"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/newsImage"
        app:layout_constraintTop_toBottomOf="@+id/newsDescription"
        app:layout_constraintWidth_max="200sp"
        app:layout_constraintWidth_min="100sp" />

</androidx.constraintlayout.widget.ConstraintLayout>